Initial commit of device implementation WIP (testing in progress)